# zappy

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.config/: package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: mirror.yml
.husky/: commit-msg  pre-commit
ai/: Broadcast.md  BroadcastManager.py  CMakeLists.txt  CommandModel.py  PLAY.md  ZappyAIModel.py  ai_movement.py  ai_states.py  constants.py  dashboard.py  launcher.py  logger.py  main.py  network.py  pathfinding.py  play.py  spawn.py
ai/btree/: bt_core.py  bt_nodes.py
ai/player/: commands.py  display.py  loop.py  terminal.py
ai/spawner/: colors.py  output.py  runner.py
docs/: SPAWN.md  TOOLS.md
docs/GUI/: ANIMATIONS.MD  GUI.md  HUD.md  PACKS.md
gui/: CMakeLists.txt
gui/include/: Camera.hpp  GuiArgs.hpp  Map.hpp  Render.hpp  Renderer.hpp  Resource.hpp  Window.hpp  exceptions.hpp  game.hpp  networking.hpp  utils.hpp
gui/include/Game/: CharacterModel.hpp  Egg.hpp  EggModel.hpp  Entity.hpp  GameState.hpp  GameStateEventHandler.hpp  Incantation.hpp  Player.hpp  Resource.hpp  ResourceColors.hpp  ServerMessage.hpp  StaticModel.hpp  Tile.hpp
gui/include/Graphics/: Canvas.hpp  ICanvas.hpp  IWindow.hpp  Types.hpp
gui/include/Network/: NetworkClient.hpp
gui/include/Protocol/: Parser.hpp
gui/include/Theme/: DefaultTheme.hpp  GlbTheme.hpp  ITheme.hpp  PackManifest.hpp  PackTheme.hpp  ThemeManager.hpp
gui/include/UI/: Hud.hpp  PlayerInfoPanel.hpp  Scale.hpp
gui/include/networking/: events.hpp
gui/packs/default/: manifest.json
gui/packs/green_man/: manifest.json
gui/packs/penguin/: credits.txt  deraumere.glb  egg.glb  food.glb  manifest.json  player.glb  sibur.glb  thystame.glb  tile.glb
gui/packs/ttt_sahur/: manifest.json
gui/src/: Camera.cpp  GuiArgs.cpp  Map.cpp  Render.cpp  Renderer.cpp  Window.cpp  main.cpp  render.cpp  render.hpp
gui/src/Game/: CharacterModel.cpp  Egg.cpp  EggModel.cpp  Entity.cpp  GameState.cpp  GameStateEventHandler.cpp  Incantation.cpp  Player.cpp  ServerMessage.cpp  StaticModel.cpp  Tile.cpp
gui/src/Graphics/: Canvas.cpp
gui/src/Network/: NetworkClient.cpp
gui/src/Protocol/: Parser.cpp
gui/src/Theme/: DefaultTheme.cpp  GlbTheme.cpp  PackManifest.cpp  PackTheme.cpp  ThemeManager.cpp
gui/src/UI/: Hud.cpp  PlayerInfoPanel.cpp
gui/src/exceptions/: ArgsException.hpp  ServerException.hpp
gui/src/game/Resources/: Resources.cpp  Resources.hpp
gui/src/networking/: BaseEventHandler.hpp  Event.hpp
gui/src/networking/GraphicsClient/: GraphicsClient.cpp  GraphicsClient.hpp
gui/src/networking/ResponseParser/: ResponseParser.cpp  ResponseParser.hpp
gui/src/networking/events/: EggConnect.hpp  EggCreate.hpp  EggDie.hpp  ElapsedTimeRequest.hpp  MapSize.hpp  NewPlayerConnect.hpp  PlayerBroadcast.hpp  PlayerCollectResource.hpp  PlayerDie.hpp  PlayerDropResource.hpp  PlayerExpulsion.hpp  PlayerIncantationEnd.hpp  PlayerIncantationStart.hpp  PlayerInventory.hpp  PlayerLayEgg.hpp  PlayerLevel.hpp  PlayerPosition.hpp  ServerBadParameter.hpp  ServerGameEnd.hpp  ServerGetTime.hpp  ServerMessage.hpp  ServerSetTime.hpp  ServerUnknownCommand.hpp  TeamName.hpp  TileContents.hpp  UnknownCommand.hpp
gui/src/utils/: LineBuffer.hpp  Zip.hpp  ZipIterator.hpp
models/: Low poly penguin_sketchfab.fbx  PINGUIN BROADCAST.fbx  PINGUIN DEAD.fbx  PINGUIN EJECT.fbx  PINGUIN INCANTATION.fbx  PINGUIN LAYIN EGG.fbx  PINGUIN LEVEL UP.fbx  PINGUIN WALK.fbx  combine_mixamo_fbx_to_glb.py  convert_fbx_to_glb.py  player.glb
models/glb/: Low poly penguin_sketchfab.glb  PINGUIN BROADCAST.glb  PINGUIN DEAD.glb  PINGUIN EJECT.glb  PINGUIN INCANTATION.glb  PINGUIN LAYIN EGG.glb  PINGUIN LEVEL UP.glb  PINGUIN WALK.glb  penguin_mixamo_player.glb  penguin_player.glb
server/: CMakeLists.txt
server/include/: zappy.hpp
server/include/zappy/: client.hpp  exceptions.hpp  game.hpp  networking.hpp  utils.hpp
server/src/: main.cpp
server/src/Server/: Server.cpp  Server.hpp
server/src/client/: BaseState.hpp  IState.hpp  QueueState.hpp
server/src/client/Client/: Client.cpp  Client.hpp
server/src/client/GuiState/: GuiState.cpp  GuiState.hpp
server/src/client/HandshakeState/: HandshakeState.cpp  HandshakeState.hpp
server/src/client/PlayerInitState/: PlayerInitState.cpp  PlayerInitState.hpp
server/src/client/PlayerRunState/: PlayerRunState.cpp  PlayerRunState.hpp
server/src/client/PlayerWaitState/: PlayerWaitState.cpp  PlayerWaitState.hpp
server/src/clients/: BaseClient.hpp  ClientReference.hpp  IClient.hpp
server/src/clients/PlayerClient/: PlayerClient.cpp  PlayerClient.hpp
server/src/exceptions/: BaseException.hpp  OutOfRange.hpp  ParseException.hpp  SocketException.hpp
server/src/exceptions/ArgumentParseException/: ArgumentParseException.cpp  ArgumentParseException.hpp
server/src/game/: Constants.hpp
server/src/game/Egg/: Egg.cpp  Egg.hpp
server/src/game/Event/: Event.cpp  Event.hpp
server/src/game/Game/: Game.cpp  Game.hpp
server/src/game/Player/: Player.cpp  Player.hpp
server/src/game/Resources/: Resources.cpp  Resources.hpp
server/src/game/Team/: Team.cpp  Team.hpp
server/src/networking/: CachingSocket.hpp  Utils.hpp
server/src/networking/NonBlockingSocket/: NonBlockingSocket.cpp  NonBlockingSocket.hpp
server/src/networking/Socket/: Socket.cpp  Socket.hpp
server/src/utils/: Array2D.hpp
server/src/utils/Logger/: Logger.cpp  Logger.hpp
tests/: CMakeLists.txt
tests/gui/: test_gui_args.cpp  test_pack_manifest.cpp  test_player.cpp  test_response_parser.cpp
tools/: combine_mixamo_fbx_to_glb.py  convert_fbx_to_glb.py  mock_server.py  repack_jpg_glb_images_as_png.py
